--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 <title>XSound - Web Audio API Library -</title>
 <meta name="author" content="池田友洋, Tomohiro IKEDA, rilakkuma3xjapan" />
-<meta name="description" content="HTML5 Web Audio API Library, HTML5 Web Audio API ライブラリ" />
-<meta name="keywords" content="XSound, xsound, XSound.js, xsound.js, Web Audio API, Web Audio API Library, Web Audio API ライブラリ" />
+<meta name="description" content="Web Audio API Library, Web Audio API ライブラリ" />
+<meta name="keywords" content="XSound, xsound, Web Audio API, Web Audio API Library, Web Audio API ライブラリ" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
 <meta name="format-detection" content="telephone=no" />
 <meta property="og:title" content="XSound" />
@@ -68,7 +68,7 @@
         </uL>
         <p><a href="https://github.com/Korilakkuma/XSound" id="forkme-banner" target="_blank">View on GitHub</a></p>
         <h1 id="project-title">XSound</h1>
-        <h2 id="project-tagline">HTML5 Web Audio API Library</h2>
+        <h2 id="project-tagline">Web Audio API Library</h2>
     </header>
 
     <div id="contents">
